[package]
name = "lout"
version = "0.1.0"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "*"
bytes = { git = "https://github.com/carllerche/bytes" }
futures = { git = "https://github.com/alexcrichton/futures-rs" }
tokio-core = { git = "https://github.com/rrichardson/tokio-core", branch = "udp_frame" }
#block_allocator = "0.2.2"
#block-alloc-appendbuf = "0.1"
serde = "~0.8"
serde_json = "0.8"
toml = "0.2"
time = "0.1"
byteorder = "0.5"
rs-es = "0.5.1"
chrono = "~0.2"
md5 = "0.2.0"
rustc-serialize = "0.3.19"
#flate2 = { version = "0.2", features = ["zlib"], default-features = false }
flate2 = "0.2"
hyper = "~0.9"

[profile.release]
lto = true

[profile.bench]
lto = true

[dependencies.rusoto]
git = "https://github.com/rrichardson/rusoto"
features = ["s3"]

[dev-dependencies]
env_logger = "0.3.0"
rand = "0.3.14"
