[package]
name = "lout"
version = "0.1.0"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]

[dependencies]
log = "0.3"
bytes = "^0.4"
futures = "0.1.6"
tokio-core = "^0.1"
#block_allocator = "0.2.2"
#block-alloc-appendbuf = "0.1"
toml = "0.2"
time = "0.1"
byteorder = "0.5"
chrono = "^0.3"
md5 = "0.2.0"
rustc-serialize = "0.3.19"
flate2 = "0.2"
snap = "0.1"
nix = "0.7.0"
csv = "0.14"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
postgres = "0.13"
rusoto = {version = "^0.23", features = ["s3", "sqs"]}
lazy_static = "^0.2"
rs-es = "^0.9"
env_logger = "^0.4"

[profile.release]
lto = true

[profile.bench]
lto = true

features = ["s3"]

[dev-dependencies]
rand = "0.3.14"
